# RomaTre

./: README.md
FondamentiDiInformatica-Frati/: CMakeLists.txt
FondamentiDiInformatica-Frati/MCM/: ControlloNumeri.c  Header.h  MCD.c  MCDandMCM.txt  MCM.c
FondamentiDiInformatica-Frati/MCM/Debug/: ControlloNumeri.c.o.d  MCD.c.o.d  MCM.c.o.d
FondamentiDiInformatica-Frati/MinimoSequenza/Debug/: minimoSequenza.c.o.d
FondamentiDiInformatica-Frati/SommaMassima3Consecutivi/Debug/: prof.c.o.d
FondamentiDiInformatica-Frati/sommaElementiArray/: sommaElementi.c  sommaElementiArray.txt
FondamentiDiInformatica-Frati/sommaElementiArray/Debug/: main.c.o.d  sommaElementi.c.o.d
FondamentiDiInformatica-Frati/sommaPositivi/: sommaPositivi.c
FondamentiDiInformatica-Frati/triplicaElementiSequenza/: triplicaElementi.c  triplicaElementiSequenza.txt
FondamentiDiInformatica-Frati/triplicaElementiSequenza/Debug/: main.c.o.d  triplicaElementi.c.o.d
