cmake_minimum_required(VERSION 3.17)
project(computer_found C)

set(CMAKE_C_STANDARD 11)

include_directories(MCM)
include_directories(sommaElementiArray)
include_directories(sommaPositivi)
include_directories(triplicaElementiSequenza)

add_executable(computer_found
        100Interi/main.c
        3Uguali/main.c
        ArrayConRiallocazioni1/main.c
        ArrayConRiallocazioni2/main.c
        ArrayDinamico/main.c
        ArrayPuntatori/main.c
        ArraySuFileBinario/main.c
        ArraySuFileTestuale/main.c
        AsteriscoNonAlfabetico/main.c
        BubbleSort/main.c
        Bug/main.c
        Cerchi/main.c
        ConsecutiviUguali/main.c
        ContaCaratteriNumerici/main.c
        ContaCaratteriStringa/main.c
        ContaCifre/main.c
        ContaSequenze/main.c
        ConversioneBase10-Base2/main.c
        ConvertiArrayNumero/main.c
        ConvertiNumeroArray/main.c
        CoordinateGeografiche/main.c
        CopiaFile/main.c
        CrescentePiuLunga/main.c
        DanglingPointer/main.c
        DecodificaBinaria/main.c
        DifferenzaAdiacenti/main.c
        DifferenzaNumerici/main.c
        Disposizioni/main.c
        DistanzaDuePunti/main.c
        DistanzaMinima/main.c
        DividiInteri/main.c
        Divisibili/main.c
        DoppiaStringa/main.c
        ElencoPersone/main.c
        EliminaNonNumerici/main.c
        EsercitazioneRicorsione/main.c
        Fattoriale/main.c
        Fibonacci/main.c
        FibonacciIterativo/main.c
        GestorePolinomi/main.c
        InsertionSort/main.c
        Intervalli/main.c
        InvertiStringa/main.c
        isPrimo/main.c
        LeggiEOrdinaPunti/main.c
        LeggiStampa/main.c
        LeggiStampaInteri/main.c
        LeggiVisualizza/main.c
        ListaDellaSpesa/main.c
        Liste_Funzioni/main.c
        Liste_FunzioniNodoFittizio/main.c
        Liste_FunzioniRicorsive/main.c
        MaggioreMinore/main.c
        MCD/main.c
        MCM/ControlloNumeri.c
        MCM/Header.h
        MCM/main.c
        MCM/MCD.c
        MCM/MCM.c
        MergeSort/main.c
        MinimoSequenza/main.c
        MinMax/main.c
        Multiplodi3Positivo/main.c
        NienteDoppieMaiuscole/main.c
        NumeriReali/main.c
        NumeriRealiProf/main.c
        NumeroPositivi/main.c
        Palindroma/main.c
        Persone/main.c
        Potenza/main.c
        PrimoProgetto/main.c
        Prodotto/main.c
        prodottoMatrici/main.c
        PuntatoriBasics/main.c
        QuickSort/main.c
        QuizSomma/main.c
        RaddoppiatoreArray/main.c
        RaddoppiatorePerIndirizzo/main.c
        RaddoppiatorePerValore/main.c
        SelectionSort/main.c
        SelectionSortBetter/main.c
        SelectionSortRecursive/main.c
        SequenzaCrescente/main.c
        sommaElementiArray/headerSommaElementiArray.h
        sommaElementiArray/main.c
        sommaElementiArray/sommaElementi.c
        SommaMassima3Consecutivi/main.c
        sommaPositivi/HeaderSommaPositivi.h
        sommaPositivi/main.c
        sommaPositivi/sommaPositivi.c
        SommaProdotto/main.c
        SommaTriple/main.c
        StampaArray/main.c
        TorreDiHanoi/main.c
        TriplePariDispari/main.c
        TripleProdottoMeno12/main.c
        TripleSomma10/main.c
        TripleSomma6/main.c
        triplicaElementiSequenza/headerTriplicaElementiSequenza.h
        triplicaElementiSequenza/main.c
        triplicaElementiSequenza/triplicaElementi.c
        TutteCifre/main.c
        TuttiPari1/main.c
        TuttiPari2/main.c
        TuttiPari3/main.c
        UgualeSommaPrecedenti/main.c)
